<resources>
    <string name="app_name">Doodle Jump</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="score">Score</string>
    <string name="game_over">Game Over!</string>
    <string name="restart">Restart</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="music">Music</string>
</resources>